Tue Aug  9 17:28:15 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/patches/series:
          Updated because of removed files

        * debian/patches/16-ace-inet-pkgconfig-files.diff:
        * debian/patches/prevent_doxygen_ace_manpages.diff:
          Removed these files, integrated into trunk

Tue Aug  9 17:17:56 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_dlfcn.h:
          Added if !defined checks around all defines in this file

Mon Aug  8 21:46:01 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/OS_NS_time.inl:

          Fix some inconsistencies in the new android-specific wrappers.

        * ace/config-android.h:

          Android does not supply std::wstring

        * include/makeinclude/platform_linux_android.GNU:

          The android supplied compiler gives a preemptive warning about
          va_args mangling change, but I cannot find anything to change
          in the ACE code, so I added the recommended warning suppressor.

Thu Aug  4 22:11:26 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/config-android.h:

          unfuzz.

Thu Aug  4 15:03:16 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ACE-INSTALL.html:
        * ace/OS_NS_Thread.cpp:
        * ace/OS_NS_errno.h:
        * ace/OS_NS_time.h:
        * ace/OS_NS_time.inl:
        * ace/config-linux.h:
        * ace/config-android.h:
        * include/makeinclude/platform_linux_android.GNU:

          Added configuration files and minor changes to allow building
          for Android using the Android Native Development Kit's standalone
          tool chain. http://developer.android.com/sdk/ndk/index.html
          Android is not a completely tested platform and automated testing
          does not work for it currently. Thanks to Trevor Fields of OCI
          for doing the heavy lifting on preparing these changes.

        * examples/APG/ThreadManagement/Async_Cancel.cpp: